--- a/.github/workflows/main_chmury-front.yml
+++ b/.github/workflows/main_chmury-front.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd ./witcher-app
           npm install
           npm run build --if-present
           npm run test --if-present
@@ -57,6 +58,5 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'chmury-front'
-          slot-name: 'Production'
           package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9614CB2455E74D368E928BC12DE28088 }}
