--- a/.github/workflows/main_chmury-front.yml
+++ b/.github/workflows/main_chmury-front.yml
@@ -24,6 +24,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           cd ./witcher-app
+          sudo chmod +x node_modules/.bin/react-scripts
           npm install
           npm run build --if-present
           npm run test --if-present
