--- a/.github/workflows/main_chmury-front.yml
+++ b/.github/workflows/main_chmury-front.yml
@@ -26,7 +26,7 @@ jobs:
           cd ./witcher-app
           sudo chmod +x node_modules/.bin/react-scripts
           npm install
-          npm run build --if-present
+          CI=false npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
